# APIGamings-

./: .gitignore  README.md  app.py  cache.json  games.json  pyproject.toml  requirements.txt  style.css  test_notebook.ipynb
assets/: README.md
